[project]
name = "mitoolspro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "country-converter>=1.3",
    "coverage>=7.7.0",
    "geopandas>=1.0.1",
    "icalendar>=6.1.1",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "linearmodels>=6.1",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.66.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20240706",
    "pydantic>=2.10.6",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "pytubefix>=8.12.2",
    "reportlab>=4.3.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "seleniumbase>=4.35.7",
    "spacy>=3.8.4",
    "statsmodels>=0.14.4",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "treelib>=1.7.1",
    "umap>=0.1.1",
    "xlsxwriter>=3.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mitoolspro"]

[tool.hatch.build]
include = [
    "mitoolspro/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "mitoolspro/**/*.py",
]
